<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/layoutPadding"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tall"
            android:ems="7"/>

        <EditText
            android:id="@+id/bodyRatesTallEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="number"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:ems="7"/>

        <EditText
            android:id="@+id/bodyRatesWeightEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="numberDecimal"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/muscleRate"
            android:ems="7"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:id="@+id/bodyRatesMuscleRateEditText"
            android:inputType="numberDecimal"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fatRate"
            android:ems="7"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:id="@+id/bodyRatesFatRateEditText"
            android:inputType="numberDecimal"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waterRate"
            android:ems="7"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:id="@+id/bodyRatesWaterRaEditText"
            android:inputType="numberDecimal"
            />
    </LinearLayout>
    <Button android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:drawableLeft="@drawable/upload"
        android:background="@color/colorAccent"
        android:text="@string/updateDetails"
        android:textColor="#FFF"
        android:id="@+id/bodyRatesUpdateButton">

    </Button>
    
    
    
    
    
</LinearLayout>
