<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tr.com.berkaytutal.beslenmedanismani.ProgramDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/layoutPadding">

        <ImageView
            android:id="@+id/programDetailImage"
            android:layout_width="200dp"
            android:layout_height="200dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buythisprogram"
            android:textColor="#fff"
            android:background="@color/colorGreen"
            android:layout_marginRight="5dp"
            android:id="@+id/programBuyButton"
            android:drawableLeft="@drawable/download"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/boughtProgramLinearLayout"
            android:visibility="gone"
            >
            <Button
                android:layout_width="44dp"
                android:layout_height="wrap_content"

                android:background="@color/colorRedDark"
                android:layout_marginRight="5dp"
                android:id="@+id/programDetailDelete"
                android:drawableLeft="@drawable/delete"
                android:padding="10dp"
                android:visibility="gone"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/indir"
                android:textColor="#fff"
                android:background="@color/accent"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/programDetailDownload"
                android:drawableLeft="@drawable/download"
                android:padding="10dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/baslat"
                android:textColor="#fff"
                android:background="@color/colorAccent"
                android:layout_marginLeft="5dp"
                android:id="@+id/programDetailStart"
                android:drawableLeft="@drawable/play"
                android:padding="10dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/programDetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Göt Eritme"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/programDetailCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="çok zor"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/programDetailHardness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="çok zor"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/programDetailDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="çok zor ama göt eritmek isteyenlerin bir numaralı programı olarak bunu belirledik. Eğer siz de göt eritmek istiyorsanız kesinlikle buraya gelmelisiniz. En harika program bu. Götünüzü erittikten sonra plaj plaj rahatça gezebileceksiniz" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/menuHeaderText"
            android:text="@string/aboutTrainer"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:id="@+id/programDetailTrainerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="#ccc"
                android:id="@+id/programDetailTrainerImage"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Trainer Name"
                    android:textSize="20sp"
                    android:id="@+id/programDetailTrainerName"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="See More"
                    android:layout_marginTop="10dp"
                    android:id="@+id/programDetailTrainerMore"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>